Corrections and % TO DOs

--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -39,8 +39,10 @@ Dostępne są również rozwiązania dostosowane specjalnie do potrzeb spółdzi
 
 Systemy eBOK różnią się pod względem funkcji, skalowalności oraz stopnia integracji z innymi rozwiązaniami, takimi jak narzędzia płatności online, systemy zarządzania nieruchomościami czy aplikacje mobilne. Wybór odpowiedniego systemu zależy od potrzeb operacyjnych organizacji, liczby użytkowników oraz poziomu automatyzacji procesów. Wdrożenie eBOK-ów wymaga przemyślanego doboru technologii i architektury, co wiąże się z licznymi wyzwaniami. Projektowanie tych systemów stanowi okazję do rozwijania umiejętności programistycznych, automatyzacji procesów i zarządzania projektami IT. Niniejsza praca koncentruje się na rozwiązaniu problemu automatyzacji obsługi wspólnot mieszkaniowych oraz usprawnieniu komunikacji między mieszkańcami a administracją.
 
-Celem niniejszej pracy inżynierskiej jest zaprojektowanie i wdrożenie aplikacji eBOK dla wspólnoty mieszkaniowej. Wybór tego rozwiązania wynika z potrzeby automatyzacji procesów obsługi mieszkańców oraz poprawy komunikacji między mieszkańcami a administracją. Nowoczesne systemy eBOK eliminują konieczność bezpośredniego kontaktu, umożliwiając załatwienie większości spraw online, co zwiększa wygodę, oszczędność czasu oraz bezpieczeństwo transakcji i wymiany informacji.
-
+% TO DO: do przeredagowania 
+% Proszę nie definiować tutaj celu pracy, a raczej wspomnieć o motywach podjęcia się tematu.
+% Chodzi o to, by nie było powtórzeń. Na definicję celu pracy jest przeznaczona kolejna sekcja.
+Celem niniejszej pracy inżynierskiej jest zaprojektowanie i wdrożenie aplikacji eBOK dla wspólnoty mieszkaniowej. Wybór tego rozwiązania wynika z potrzeby automatyzacji procesów obsługi mieszkańców oraz poprawy komunikacji między mieszkańcami a administracją. Nowoczesne systemy eBOK eliminują konieczność bezpośredniego kontaktu, umożliwiając załatwienie większości spraw online, co zwiększa wygodę, oszczędność czasu oraz bezpieczeństwo transakcji i wymiany informacji. 
 Finalny produkt opracowywany w tej pracy nosi nazwę „Harmony Home Net”, odzwierciedlając kluczowe cele aplikacji: ułatwienie komunikacji i współpracy między mieszkańcami a administracją oraz zapewnienie płynnego i zintegrowanego zarządzania nieruchomościami.
 
 \section{Cel i zakres pracy}
