--- a/Dyplom/streszczenie.tex
+++ b/Dyplom/streszczenie.tex
@@ -14,7 +14,7 @@
 \begin{abstract}
 Praca inżynierska dotyczy projektu aplikacji internetowej przeznaczonej dla członków i administracji spółdzielni mieszkaniowych. Aplikacja ta pozwalać ma na automatyzację komunikacji między spółdzielnią a mieszkańcami, zapewniając jednocześnie bezpieczeństwo danych i elastyczność w dostępie do informacji. Powinna również dawać możliwość przeglądania umów, rozliczeń, zgłoszeń oraz komunikatów, a także na wykonywanie płatności online, wszystko w intuicyjnym i przyjaznym dla użytkownika środowisku.
 
-W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK. Opisano przyjęte założenia projektowe oraz sposób implementacji, testowania i wdrożenie wynikowej aplikacji. Zaprezentowano też stos wykorzystanych technologii: Spring Boot, Hibernate, Next.js oraz bazę danych PostgreSQL. Powstała aplikacja może być wdrożona w rzeczywistym środowisku, usprawniając codzienną obsługę mieszkańców i poprawiając efektywność działania spółdzielni.
+W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK. Opisano przyjęte założenia projektowe oraz sposób implementacji, testowania i wdrożenie wynikowej aplikacji. Zaprezentowano też stos wykorzystanych technologii: Spring Boot, Hibernate, Next.js oraz bazę danych PostgreSQL. Powstała aplikacja może być uruchomiona w środowisku produkcyjnym, usprawniając codzienną obsługę mieszkańców i poprawiając efektywność działania spółdzielni.
 \end{abstract}
 \mykeywords
 
